--- a/web/slar/package.json
+++ b/web/slar/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint src --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint src"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.7",
@@ -35,7 +35,7 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "5.9.3",
-    "eslint": "^8.57.0",
+    "eslint": "^9.17.0",
     "eslint-config-next": "15.1.0"
   }
 }
